<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/type_info_textview" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/type_info"
        android:visibility="invisible"
        android:textSize="40sp"
        />
    
    <TextView 
        android:id="@+id/score_textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/current_score"
        android:textSize="50sp"/>
    
    <TextView 
        android:id="@+id/best_score_textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/best_score"
        android:textSize="40sp"/>
    
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/restart"
        android:layout_marginTop="20dip"
        android:clickable="true"
        android:onClick="onRestartButtonClick"
        android:textSize="50sp"/>
    
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/back"
        android:visibility="invisible"
        android:textSize="40sp"/>

</LinearLayout>
